--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ enableEmoji = true
   description = "Gap the Mind Blog"
   favicon = "/img/favicon.ico"
   logo = "/img/gapthemind-logo-grey.png"
-  mainSections = ["home", "about", "blog"]
+  mainSections = ["home", "about", "blog", "archive"]
   navallcaps = true
   # show/hide social icons in site header & footer
   # configure social icons and links below in [[params.social]]
@@ -124,7 +124,7 @@ enableEmoji = true
     title = "Blog"
     url = "/blog/"
     weight = 3
-    [[menu.header]]
+  [[menu.header]]
     name = "Archive"
     title = "Archive"
     url = "/archive/"
