--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,9 @@ preserveTaxonomyNames = true
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
 enableEmoji = true
 
+[permalinks]
+  blog = "blog/:year/:month/:day/:slug/"
+
 [markup]
   defaultMarkdownHandler = "goldmark"
   [markup.goldmark.renderer]
