switch to utterances instead of disqus
reason: the ads in disqus are of very low quality

--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ title = "Gap the Mind - A Personal Blog by Thomas Lieb"
 author = "Thomas Lieb"
 copyright = "2021 Thomas Lieb, Dublin, Ireland" # set to override the auto generated copyright using org info and now year
 googleAnalytics = "G-NYMTZXZR2B"
-disqusShortname = "gapthemind-info" # see params.utterances to use utterances instead of Disqus
+disqusShortname = "" # see params.utterances to use utterances instead of Disqus
 metaDataFormat = "yaml"
 footnoteReturnLinkContents = "&#8617;" # ↩
 # set deliberately low for testing choose your preffered number based on the blog layout you've chosen
@@ -70,14 +70,14 @@ enableEmoji = true
   # for more http://tachyons.io/docs/typography/font-family/
   textFontFamily = "sans-serif"
   headingFontFamily = "sans-serif"
-
+  
   # Configuration of https://utteranc.es/ for comments
   [params.utterances]
-    use_utterances = false
-    repo_name = ""
+    use_utterances = true
+    repo_name = "rietho/blogdown_website"
     issue_term = "pathname" # url, pathname, or title
     theme = "boxy-light"
-    label = ""
+    label = "blog-comment"
 
   # Configuration of math rendering
   [params.math]
