--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,7 @@ paginate = 6
 preserveTaxonomyNames = true
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
 enableEmoji = true
+enableRobotsTXT = true
 
 [permalinks]
   blog = "blog/:year/:month/:day/:slug/"
