test cookie banner

--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ languageCode = "en"
 title = "Gap the Mind - A Personal Blog by Thomas Lieb"
 author = "Thomas Lieb"
 copyright = "2021 Thomas Lieb, Dublin, Ireland" # set to override the auto generated copyright using org info and now year
-googleAnalytics = "G-NYMTZXZR2B"
+googleAnalytics = "" # "G-NYMTZXZR2B"
 disqusShortname = "" # see params.utterances to use utterances instead of Disqus
 metaDataFormat = "yaml"
 footnoteReturnLinkContents = "&#8617;" # ↩
